Bug 1576077 - make ScaledFontDWrite remember if it needs synthetic bold. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D45721