gfx/2d/ScaledFontDWrite.cpp
@@ -12,6 +12,7 @@
 #include "mozilla/FontPropertyTypes.h"
 #include "mozilla/webrender/WebRenderTypes.h"
 #include "HelpersD2D.h"
+#include "StackArray.h"
 
 #include "dwrite_3.h"
 
@@ -414,12 +415,16 @@ ScaledFontDWrite::InstanceData::InstanceData(
     const wr::FontInstanceOptions* aOptions,
     const wr::FontInstancePlatformOptions* aPlatformOptions)
     : mUseEmbeddedBitmap(false),
+      mApplySyntheticBold(false),
       mRenderingMode(DWRITE_RENDERING_MODE_DEFAULT),
       mGamma(2.2f),
       mContrast(1.0f) {
   if (aOptions) {
     if (aOptions->flags & wr::FontInstanceFlags_EMBEDDED_BITMAPS) {
       mUseEmbeddedBitmap = true;
+    }
+    if (aOptions->flags & wr::FontInstanceFlags_SYNTHETIC_BOLD) {
+      mApplySyntheticBold = true;
     }
     if (aOptions->flags & wr::FontInstanceFlags_FORCE_GDI) {
       mRenderingMode = DWRITE_RENDERING_MODE_GDI_CLASSIC;
@@ -495,7 +500,7 @@ bool ScaledFontDWrite::GetWRFontInstanceOptions(
   wr::FontInstanceOptions options;
   options.render_mode = wr::ToFontRenderMode(GetDefaultAAMode());
   options.flags = wr::FontInstanceFlags{0};
-  if (mFontFace->GetSimulations() & DWRITE_FONT_SIMULATIONS_BOLD) {
+  if (HasSyntheticBold()) {
     options.flags |= wr::FontInstanceFlags_SYNTHETIC_BOLD;
   }
   if (UseEmbeddedBitmaps()) {
@@ -540,8 +545,8 @@ bool ScaledFontDWrite::GetWRFontInstanceOptions(
 // given IDWriteFontFace, with specified variation-axis values applied.
 // Returns nullptr in case of failure.
 static already_AddRefed<IDWriteFontFace5> CreateFaceWithVariations(
-    IDWriteFontFace* aFace, const FontVariation* aVariations,
-    uint32_t aNumVariations) {
+    IDWriteFontFace* aFace, DWRITE_FONT_SIMULATIONS aSimulations,
+    const FontVariation* aVariations = nullptr, uint32_t aNumVariations = 0) {
   auto makeDWriteAxisTag = [](uint32_t aTag) {
     return DWRITE_MAKE_FONT_AXIS_TAG((aTag >> 24) & 0xff, (aTag >> 16) & 0xff,
                                      (aTag >> 8) & 0xff, aTag & 0xff);
@@ -554,28 +559,74 @@ static already_AddRefed<IDWriteFontFace5> CreateFaceWithVariations(
     return nullptr;
   }
 
-  DWRITE_FONT_SIMULATIONS sims = aFace->GetSimulations();
   RefPtr<IDWriteFontResource> res;
   if (FAILED(ff5->GetFontResource(getter_AddRefs(res)))) {
     return nullptr;
   }
 
   std::vector<DWRITE_FONT_AXIS_VALUE> fontAxisValues;
-  fontAxisValues.reserve(aNumVariations);
-  for (uint32_t i = 0; i < aNumVariations; i++) {
-    DWRITE_FONT_AXIS_VALUE axisValue = {makeDWriteAxisTag(aVariations[i].mTag),
-                                        aVariations[i].mValue};
-    fontAxisValues.push_back(axisValue);
+  if (aNumVariations) {
+    fontAxisValues.reserve(aNumVariations);
+    for (uint32_t i = 0; i < aNumVariations; i++) {
+      DWRITE_FONT_AXIS_VALUE axisValue = {
+          makeDWriteAxisTag(aVariations[i].mTag), aVariations[i].mValue};
+      fontAxisValues.push_back(axisValue);
+    }
+  } else {
+    uint32_t count = ff5->GetFontAxisValueCount();
+    if (count) {
+      fontAxisValues.resize(count);
+      if (FAILED(ff5->GetFontAxisValues(fontAxisValues.data(), count))) {
+        fontAxisValues.clear();
+      }
+    }
   }
 
   RefPtr<IDWriteFontFace5> newFace;
-  if (FAILED(res->CreateFontFace(sims, fontAxisValues.data(),
+  if (FAILED(res->CreateFontFace(aSimulations, fontAxisValues.data(),
                                  fontAxisValues.size(),
                                  getter_AddRefs(newFace)))) {
     return nullptr;
   }
 
   return newFace.forget();
+}
+
+bool UnscaledFontDWrite::InitBold() {
+  if (mFontFaceBold) {
+    return true;
+  }
+
+  DWRITE_FONT_SIMULATIONS sims = mFontFace->GetSimulations();
+  if (sims & DWRITE_FONT_SIMULATIONS_BOLD) {
+    mFontFaceBold = mFontFace;
+    return true;
+  }
+  sims |= DWRITE_FONT_SIMULATIONS_BOLD;
+
+  RefPtr<IDWriteFontFace5> ff5 = CreateFaceWithVariations(mFontFace, sims);
+  if (ff5) {
+    mFontFaceBold = ff5;
+  } else {
+    UINT32 numFiles = 0;
+    if (FAILED(mFontFace->GetFiles(&numFiles, nullptr))) {
+      return false;
+    }
+    StackArray<IDWriteFontFile*, 1> files(numFiles);
+    if (FAILED(mFontFace->GetFiles(&numFiles, files.data()))) {
+      return false;
+    }
+    HRESULT hr = Factory::GetDWriteFactory()->CreateFontFace(
+        mFontFace->GetType(), numFiles, files.data(), mFontFace->GetIndex(),
+        sims, getter_AddRefs(mFontFaceBold));
+    for (UINT32 i = 0; i < numFiles; ++i) {
+      files[i]->Release();
+    }
+    if (FAILED(hr) || !mFontFaceBold) {
+      return false;
+    }
+  }
+  return true;
 }
 
 already_AddRefed<ScaledFont> UnscaledFontDWrite::CreateScaledFont(
@@ -590,12 +641,21 @@ already_AddRefed<ScaledFont> UnscaledFontDWrite::CreateScaledFont(
       *reinterpret_cast<const ScaledFontDWrite::InstanceData*>(aInstanceData);
 
   IDWriteFontFace* face = mFontFace;
+  if (instanceData.mApplySyntheticBold) {
+    if (!InitBold()) {
+      gfxWarning() << "Failed creating bold IDWriteFontFace.";
+      return nullptr;
+    }
+    face = mFontFaceBold;
+  }
+  DWRITE_FONT_SIMULATIONS sims = face->GetSimulations();
 
   // If variations are required, we create a separate IDWriteFontFace5 with
   // the requested settings applied.
   RefPtr<IDWriteFontFace5> ff5;
   if (aNumVariations) {
-    ff5 = CreateFaceWithVariations(mFontFace, aVariations, aNumVariations);
+    ff5 =
+        CreateFaceWithVariations(mFontFace, sims, aVariations, aNumVariations);
     if (ff5) {
       face = ff5;
     } else {
